--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 Flask==1.1.1
 Flask-Compress==1.4.0
-Flask-Dropzone==1.5.4
 Flask-Uploads==0.2.1
 scikit-learn==0.23.2
+sklearn==0.0
 python-dateutil==2.8.1
 pandas==1.0.3
 joblib==0.14.1
+scipy==1.5.2
+six==1.15.0
+pytz==2020.1
+click==7.1.2
+Jinja2==2.11.2
+DateTime==4.3
+numpy==1.17.2
+itsdangerous==1.1.0
+MarkupSafe==1.1.1
+threadpoolctl==2.1.0
+Werkzeug==0.16.0
+zope.interface==5.1.0
